[gd_scene load_steps=3 format=1]

[ext_resource path="res://botonGrupo.gd" type="Script" id=1]
[ext_resource path="res://boton.gd" type="Script" id=2]

[node name="boton" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="boton-lb" type="TextureButton" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -337.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = -271.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0
script/script = ExtResource( 2 )
colorInactivo = Color( 0.8, 0.8, 0.8, 1 )
colorActivo = Color( 1, 1, 1, 1 )

[node name="sonido" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = null
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 1
default/reverb_send = 0.27
default/chorus_send = 0.0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[connection signal="apretado" from="boton-lb" to="." method="_on_botonlb_apretado"]

[connection signal="button_down" from="boton-lb" to="boton-lb" method="_on_botonlb_button_down"]

[connection signal="button_up" from="boton-lb" to="boton-lb" method="_on_botonlb_button_up"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


