[gd_scene load_steps=44 format=1]

[ext_resource path="res://simon/principal.gd" type="Script" id=1]
[ext_resource path="res://simon/botonGrupo.gd" type="Script" id=2]
[ext_resource path="res://assets/img/fondo.png" type="Texture" id=3]
[ext_resource path="res://simon/botones.gd" type="Script" id=4]
[ext_resource path="res://simon/boton.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/01_normal.jpeg" type="Texture" id=6]
[ext_resource path="res://assets/img/01_presionada.jpeg" type="Texture" id=7]
[ext_resource path="res://assets/img/01_normal_clickmask.pbm" type="BitMap" id=8]
[ext_resource path="res://assets/img/02_normal.jpeg" type="Texture" id=9]
[ext_resource path="res://assets/img/02_presionada.jpeg" type="Texture" id=10]
[ext_resource path="res://assets/img/02_normal_clickmask.pbm" type="BitMap" id=11]
[ext_resource path="res://assets/img/03_normal.jpeg" type="Texture" id=12]
[ext_resource path="res://assets/img/03_presionada.jpeg" type="Texture" id=13]
[ext_resource path="res://assets/img/03_normal_clickmask.pbm" type="BitMap" id=14]
[ext_resource path="res://assets/img/04_normal.jpeg" type="Texture" id=15]
[ext_resource path="res://assets/img/04_presionada.jpeg" type="Texture" id=16]
[ext_resource path="res://assets/img/04_normal_clickmask.pbm" type="BitMap" id=17]
[ext_resource path="res://simon/notas_8bit.tres" type="SampleLibrary" id=18]
[ext_resource path="res://assets/sounds/aplausos.smp" type="Sample" id=19]
[ext_resource path="res://assets/click.smp" type="Sample" id=20]
[ext_resource path="res://assets/sounds/error.smp" type="Sample" id=21]
[ext_resource path="res://assets/sounds/intro_la_yumba.smp" type="Sample" id=22]
[ext_resource path="res://assets/sounds/win.smp" type="Sample" id=23]
[ext_resource path="res://assets/sounds/win_level_0.smp" type="Sample" id=24]
[ext_resource path="res://assets/sounds/win_level_1.smp" type="Sample" id=25]
[ext_resource path="res://assets/sounds/win_level_2.smp" type="Sample" id=26]
[ext_resource path="res://assets/buttons/jugar.png" type="Texture" id=27]
[ext_resource path="res://assets/buttons/jugar_pressed.png" type="Texture" id=28]
[ext_resource path="res://assets/buttons/jugar.pbm" type="BitMap" id=29]
[ext_resource path="res://mostrar.tres" type="Animation" id=30]
[ext_resource path="res://assets/labels/fin.png" type="Texture" id=31]
[ext_resource path="res://assets/labels/win_simon.png" type="Texture" id=32]
[ext_resource path="res://assets/labels/error.png" type="Texture" id=33]
[ext_resource path="res://assets/sounds/cancion_1.smp" type="Sample" id=34]
[ext_resource path="res://assets/sounds/cancion_2.smp" type="Sample" id=35]
[ext_resource path="res://assets/sounds/cancion_3.smp" type="Sample" id=36]

[sub_resource type="SampleLibrary" id=1]

samples/aplausos = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 19 )
}
samples/click = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 20 )
}
samples/error = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 21 )
}
samples/intro_la_yumba = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 22 )
}
samples/win = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 23 )
}
samples/win_level_0 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 24 )
}
samples/win_level_1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 25 )
}
samples/win_level_2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 26 )
}

[sub_resource type="Animation" id=2]

length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.25, 0.5 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 523, 401 ), Vector2( 507, 401 ), Vector2( 659, 402 ), Vector2( 1297, 407 ) ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 523, -200 ), Vector2( 523, 100 ), Vector2( 523, 50 ) ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 523, 50 ), Vector2( 523, 100 ), Vector2( 523, -200 ) ]
}

[sub_resource type="Animation" id=5]

length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0.5, 1.7, 2.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 360 ), Vector2( 640, 360 ), Vector2( 640, -100.592 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 0.0, 20.0, 0.0, -20.0, 0.0, 20.0, 0.0, -20.0, 0.0, 20.0, 0.0 ]
}

[sub_resource type="SampleLibrary" id=6]

samples/cancion_0 = {
"db": 5.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 34 )
}
samples/cancion_1 = {
"db": 5.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 35 )
}
samples/cancion_2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 36 )
}

[sub_resource type="GDScript" id=7]

script/source = "extends SamplePlayer

var track
var playing
signal song_finished

func _ready():
	playing = false
	track = str(\"cancion_\",get_node(\"/root/global\").subNivelActual)
	set_process(true)

func get_texto_cancion():
	var txt = \"\"
	if(track == \"cancion_0\"):
		txt = [\"La Yumba - Música: Osvaldo Pugliese\"]
	if(track == \"cancion_1\"):
		txt = [\"La Mariposa - Música: Pedro Maffia, Letra: Celedonio Flores\"]
	if(track == \"cancion_2\"):
		txt = [\"Recuerdo - Música: Osvaldo Pugliese, Letra: Eduardo Moreno\"]
	return txt

func sonar():
	get_node(\"/root/global\").stop_bg_music()
	playing = true
	play(track)

func _process(delta):
	if(!is_active() && playing):
		emit_signal(\"song_finished\")
		playing = false"

[node name="scene" type="Node2D"]

transform/pos = Vector2( -0.814575, 0.814514 )
script/script = ExtResource( 1 )

[node name="nombre_cancion" type="Position2D" parent="."]

transform/pos = Vector2( 640, 50 )

[node name="fondo" type="Node2D" parent="."]

[node name="teclado" type="Node2D" parent="."]

transform/pos = Vector2( 63.4674, 250.285 )
script/script = ExtResource( 2 )

[node name="fondo_piano" type="Sprite" parent="teclado"]

transform/pos = Vector2( 569.844, 307.914 )
transform/scale = Vector2( 0.77, 0.21 )
texture = ExtResource( 3 )

[node name="octava1" type="Node2D" parent="teclado"]

script/script = ExtResource( 4 )

[node name="C1" parent="teclado/octava1" instance=ExtResource( 5 )]

transform/pos = Vector2( 62.0059, 201.635 )

[node name="boton-lb" parent="teclado/octava1/C1"]

margin/left = 0.0
margin/right = -5.0
margin/bottom = -159.0
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
textures/click_mask = ExtResource( 8 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava1/C1"]

transform/pos = Vector2( 33, 187 )

[node name="D1" parent="teclado/octava1" instance=ExtResource( 5 )]

transform/pos = Vector2( 477.006, 199.635 )

[node name="boton-lb" parent="teclado/octava1/D1"]

margin/left = -343.0
margin/top = 2.0
margin/right = 338.0
margin/bottom = -161.0
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
textures/click_mask = ExtResource( 11 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava1/D1"]

transform/pos = Vector2( -306.927, 189 )
z/relative = false

[node name="E1" parent="teclado/octava1" instance=ExtResource( 5 )]

transform/pos = Vector2( 625.092, 486.926 )
transform/rot = 180.0
transform/scale = Vector2( -1, -1 )

[node name="boton-lb" parent="teclado/octava1/E1"]

margin/left = -419.0
margin/top = -288.0
margin/right = 414.0
margin/bottom = 128.0
textures/normal = ExtResource( 12 )
textures/pressed = ExtResource( 13 )
textures/click_mask = ExtResource( 14 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava1/E1"]

transform/pos = Vector2( -383.036, -98.2911 )
transform/rot = -5.00896e-06

[node name="F1" parent="teclado/octava1" instance=ExtResource( 5 )]

transform/pos = Vector2( 1023.84, 466.781 )

[node name="boton-lb" parent="teclado/octava1/F1"]

margin/left = -746.0
margin/top = -266.0
margin/right = 741.0
margin/bottom = 107.0
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
textures/click_mask = ExtResource( 8 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava1/F1"]

transform/pos = Vector2( -711.557, -78.9125 )

[node name="G1" parent="teclado/octava1" instance=ExtResource( 5 )]

transform/pos = Vector2( 1023.84, 466.781 )

[node name="boton-lb" parent="teclado/octava1/G1"]

margin/left = -674.0
margin/top = -266.0
margin/right = 669.0
margin/bottom = 107.0
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
textures/click_mask = ExtResource( 11 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava1/G1"]

transform/pos = Vector2( -638.251, -78.0981 )

[node name="A1" parent="teclado/octava1" instance=ExtResource( 5 )]

transform/pos = Vector2( 1023.84, 466.781 )

[node name="boton-lb" parent="teclado/octava1/A1"]

margin/left = -601.0
margin/top = -266.0
margin/right = 596.0
margin/bottom = 107.0
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
textures/click_mask = ExtResource( 11 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava1/A1"]

transform/pos = Vector2( -566.389, -78.0981 )

[node name="B1" parent="teclado/octava1" instance=ExtResource( 5 )]

transform/pos = Vector2( 1023.84, 466.781 )

[node name="boton-lb" parent="teclado/octava1/B1"]

margin/left = -527.0
margin/top = -267.0
margin/right = 522.0
margin/bottom = 107.0
textures/normal = ExtResource( 12 )
textures/pressed = ExtResource( 13 )
textures/click_mask = ExtResource( 14 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava1/B1"]

transform/pos = Vector2( -489.826, -78.0981 )

[node name="C#1" parent="teclado/octava1" instance=ExtResource( 5 )]

transform/pos = Vector2( 737.039, 380.106 )

[node name="boton-lb" parent="teclado/octava1/C#1"]

margin/left = -621.0
margin/top = -194.0
margin/right = 651.0
margin/bottom = 110.0
textures/normal = ExtResource( 15 )
textures/pressed = ExtResource( 16 )
textures/click_mask = ExtResource( 17 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava1/C#1"]

transform/pos = Vector2( -605.391, -111.156 )

[node name="D#1" parent="teclado/octava1" instance=ExtResource( 5 )]

transform/pos = Vector2( 737.039, 380.106 )

[node name="boton-lb" parent="teclado/octava1/D#1"]

margin/left = -547.0
margin/top = -194.0
margin/right = 577.0
margin/bottom = 110.0
textures/normal = ExtResource( 15 )
textures/pressed = ExtResource( 16 )
textures/click_mask = ExtResource( 17 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava1/D#1"]

transform/pos = Vector2( -531.271, -111.156 )

[node name="F#1" parent="teclado/octava1" instance=ExtResource( 5 )]

transform/pos = Vector2( 737.039, 380.106 )

[node name="boton-lb" parent="teclado/octava1/F#1"]

margin/left = -405.0
margin/top = -197.0
margin/right = 435.0
margin/bottom = 113.0
textures/normal = ExtResource( 15 )
textures/pressed = ExtResource( 16 )
textures/click_mask = ExtResource( 17 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava1/F#1"]

transform/pos = Vector2( -388.732, -112.785 )

[node name="G#1" parent="teclado/octava1" instance=ExtResource( 5 )]

transform/pos = Vector2( 737.039, 380.106 )

[node name="boton-lb" parent="teclado/octava1/G#1"]

margin/left = -331.0
margin/top = -197.0
margin/right = 361.0
margin/bottom = 113.0
textures/normal = ExtResource( 15 )
textures/pressed = ExtResource( 16 )
textures/click_mask = ExtResource( 17 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava1/G#1"]

transform/pos = Vector2( -314.612, -112.156 )

[node name="A#1" parent="teclado/octava1" instance=ExtResource( 5 )]

transform/pos = Vector2( 738.845, 376.496 )

[node name="boton-lb" parent="teclado/octava1/A#1"]

margin/left = -260.0
margin/top = -194.0
margin/right = 290.0
margin/bottom = 110.0
textures/normal = ExtResource( 15 )
textures/pressed = ExtResource( 16 )
textures/click_mask = ExtResource( 17 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava1/A#1"]

transform/pos = Vector2( -241.484, -106.917 )

[node name="octava2" type="Node2D" parent="teclado"]

script/script = ExtResource( 4 )

[node name="C2" parent="teclado/octava2" instance=ExtResource( 5 )]

transform/pos = Vector2( 936.744, 206.157 )

[node name="boton-lb" parent="teclado/octava2/C2"]

margin/left = -368.0
margin/top = -6.0
margin/right = 363.0
margin/bottom = -153.0
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
textures/click_mask = ExtResource( 8 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava2/C2"]

transform/pos = Vector2( -332.868, 181.526 )

[node name="D2" parent="teclado/octava2" instance=ExtResource( 5 )]

transform/pos = Vector2( 477.006, 201.635 )

[node name="boton-lb" parent="teclado/octava2/D2"]

margin/left = 164.0
margin/top = -2.0
margin/right = -169.0
margin/bottom = -157.0
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
textures/click_mask = ExtResource( 11 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava2/D2"]

transform/pos = Vector2( 201.732, 187.677 )

[node name="E2" parent="teclado/octava2" instance=ExtResource( 5 )]

transform/pos = Vector2( 631.102, 490.596 )
transform/rot = 180.0
transform/scale = Vector2( -1, -1 )

[node name="boton-lb" parent="teclado/octava2/E2"]

margin/left = 83.0
margin/top = -292.0
margin/right = -88.0
margin/bottom = 132.0
textures/normal = ExtResource( 12 )
textures/pressed = ExtResource( 13 )
textures/click_mask = ExtResource( 14 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava2/E2"]

transform/pos = Vector2( 117.684, -102.913 )
transform/rot = -5.00896e-06

[node name="F2" parent="teclado/octava2" instance=ExtResource( 5 )]

transform/pos = Vector2( 1023.84, 466.781 )

[node name="boton-lb" parent="teclado/octava2/F2"]

margin/left = -238.0
margin/top = -267.0
margin/right = 233.0
margin/bottom = 108.0
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )
textures/click_mask = ExtResource( 8 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava2/F2"]

transform/pos = Vector2( -203.378, -78.2837 )

[node name="G2" parent="teclado/octava2" instance=ExtResource( 5 )]

transform/pos = Vector2( 1023.84, 466.781 )

[node name="boton-lb" parent="teclado/octava2/G2"]

margin/left = -166.0
margin/top = -268.0
margin/right = 161.0
margin/bottom = 109.0
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
textures/click_mask = ExtResource( 11 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava2/G2"]

transform/pos = Vector2( -132.516, -77.4692 )

[node name="A2" parent="teclado/octava2" instance=ExtResource( 5 )]

transform/pos = Vector2( 1313.25, 207.519 )

[node name="boton-lb" parent="teclado/octava2/A2"]

margin/left = -383.0
margin/top = -8.0
margin/right = 378.0
margin/bottom = -151.0
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
textures/click_mask = ExtResource( 11 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava2/A2"]

transform/pos = Vector2( -346.177, 180.978 )

[node name="B2" parent="teclado/octava2" instance=ExtResource( 5 )]

transform/pos = Vector2( 1021.5, 466 )

[node name="boton-lb" parent="teclado/octava2/B2"]

margin/left = -19.0
margin/top = -268.0
margin/right = 14.0
margin/bottom = 108.0
textures/normal = ExtResource( 12 )
textures/pressed = ExtResource( 13 )
textures/click_mask = ExtResource( 14 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava2/B2"]

transform/pos = Vector2( 18.0645, -77.5027 )

[node name="C#2" parent="teclado/octava2" instance=ExtResource( 5 )]

transform/pos = Vector2( 737.039, 381.106 )

[node name="boton-lb" parent="teclado/octava2/C#2"]

margin/left = -114.0
margin/top = -198.0
margin/right = 144.0
margin/bottom = 114.0
textures/normal = ExtResource( 15 )
textures/pressed = ExtResource( 16 )
textures/click_mask = ExtResource( 17 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava2/C#2"]

transform/pos = Vector2( -98.2117, -112.414 )

[node name="D#2" parent="teclado/octava2" instance=ExtResource( 5 )]

transform/pos = Vector2( 737.039, 380.106 )

[node name="boton-lb" parent="teclado/octava2/D#2"]

margin/left = -40.0
margin/top = -198.0
margin/right = 70.0
margin/bottom = 114.0
textures/normal = ExtResource( 15 )
textures/pressed = ExtResource( 16 )
textures/click_mask = ExtResource( 17 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava2/D#2"]

transform/pos = Vector2( -24.0916, -111.414 )

[node name="F#2" parent="teclado/octava2" instance=ExtResource( 5 )]

transform/pos = Vector2( 737.039, 381.106 )

[node name="boton-lb" parent="teclado/octava2/F#2"]

margin/left = 103.0
margin/top = -198.0
margin/right = -73.0
margin/bottom = 114.0
textures/normal = ExtResource( 15 )
textures/pressed = ExtResource( 16 )
textures/click_mask = ExtResource( 17 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava2/F#2"]

transform/pos = Vector2( 120.076, -112.414 )

[node name="G#2" parent="teclado/octava2" instance=ExtResource( 5 )]

transform/pos = Vector2( 737.039, 381.106 )

[node name="boton-lb" parent="teclado/octava2/G#2"]

margin/left = 173.0
margin/top = -198.0
margin/right = -143.0
margin/bottom = 114.0
textures/normal = ExtResource( 15 )
textures/pressed = ExtResource( 16 )
textures/click_mask = ExtResource( 17 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava2/G#2"]

transform/pos = Vector2( 190.753, -110.785 )

[node name="A#2" parent="teclado/octava2" instance=ExtResource( 5 )]

transform/pos = Vector2( 737.845, 376.388 )

[node name="boton-lb" parent="teclado/octava2/A#2"]

margin/left = 247.0
margin/top = -193.0
margin/right = -217.0
margin/bottom = 109.0
textures/normal = ExtResource( 15 )
textures/pressed = ExtResource( 16 )
textures/click_mask = ExtResource( 17 )

[node name="pos_ayuda" type="Position2D" parent="teclado/octava2/A#2"]

transform/pos = Vector2( 263.696, -104.438 )

[node name="sonidos" type="SamplePlayer" parent="teclado"]

config/polyphony = 1
config/samples = ExtResource( 18 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="sonidos_ui" type="SamplePlayer" parent="teclado"]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="btnEmpezar" type="TextureButton" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 523.0
margin/top = 401.0
margin/right = 763.0
margin/bottom = 464.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 27 )
textures/pressed = ExtResource( 28 )
textures/click_mask = ExtResource( 29 )
params/resize_mode = 0
params/scale = Vector2( 0.4, 0.4 )
params/stretch_mode = 0

[node name="anim" type="AnimationPlayer" parent="btnEmpezar"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/ocultar = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="btnEmpezarDeNuevo" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 523.0
margin/top = -200.0
margin/right = 762.2
margin/bottom = -137.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 27 )
textures/pressed = ExtResource( 28 )
textures/click_mask = ExtResource( 29 )
params/resize_mode = 0
params/scale = Vector2( 0.4, 0.4 )
params/stretch_mode = 0

[node name="anim" type="AnimationPlayer" parent="btnEmpezarDeNuevo"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/mostrar = SubResource( 3 )
anims/ocultar = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="timerRespuesta" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="timerCortito" type="Timer" parent="."]

process_mode = 1
wait_time = 0.4
one_shot = false
autostart = false

[node name="timerSuperCortito" type="Timer" parent="."]

process_mode = 1
wait_time = 0.15
one_shot = false
autostart = false

[node name="label" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 640, -100 )

[node name="anim" type="AnimationPlayer" parent="label"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/mostrar = ExtResource( 30 )
"anims/mostrar (copy)" = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="fin" type="Sprite" parent="label"]

visibility/visible = false
texture = ExtResource( 31 )

[node name="ganaste" type="Sprite" parent="label"]

visibility/visible = false
texture = ExtResource( 32 )

[node name="error" type="Sprite" parent="label"]

visibility/visible = false
texture = ExtResource( 33 )

[node name="canciones" type="SamplePlayer" parent="."]

config/polyphony = 29
config/samples = SubResource( 6 )
default/volume_db = 12.65
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0
script/script = SubResource( 7 )

[node name="timerHelp" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="nivelGanado" from="." to="." method="_on_scene_nivelGanado" flags=6]

[connection signal="pressed" from="btnEmpezar" to="." method="_on_btnEmpezar_pressed"]

[connection signal="pressed" from="btnEmpezarDeNuevo" to="." method="_on_btnEmpezarDeNuevo_pressed"]

[connection signal="timeout" from="timerHelp" to="." method="_on_timerHelp_timeout"]


[editable path="teclado/octava1/C1"]
[editable path="teclado/octava1/D1"]
[editable path="teclado/octava1/E1"]
[editable path="teclado/octava1/F1"]
[editable path="teclado/octava1/G1"]
[editable path="teclado/octava1/A1"]
[editable path="teclado/octava1/B1"]
[editable path="teclado/octava1/C#1"]
[editable path="teclado/octava1/D#1"]
[editable path="teclado/octava1/F#1"]
[editable path="teclado/octava1/G#1"]
[editable path="teclado/octava1/A#1"]
[editable path="teclado/octava2/C2"]
[editable path="teclado/octava2/D2"]
[editable path="teclado/octava2/E2"]
[editable path="teclado/octava2/F2"]
[editable path="teclado/octava2/G2"]
[editable path="teclado/octava2/A2"]
[editable path="teclado/octava2/B2"]
[editable path="teclado/octava2/C#2"]
[editable path="teclado/octava2/D#2"]
[editable path="teclado/octava2/F#2"]
[editable path="teclado/octava2/G#2"]
[editable path="teclado/octava2/A#2"]
